apply plugin: 'java'

group = 'camp.nextstep'
version = '1.0.0'
sourceCompatibility = '11'

repositories {
    mavenCentral()
}

ext {
    springVersion = '5.3.20'
    tomcatVersion = '8.5.79'
}

dependencies {
    // servlet
    implementation 'javax.servlet:jstl:1.2'
    implementation 'javax.servlet:javax.servlet-api:4.0.1'

    // apache commons
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'org.apache.commons:commons-dbcp2:2.9.0'

    // spring
    implementation "org.springframework:spring-jdbc:${springVersion}"
    implementation "org.springframework:spring-web:${springVersion}"

    // aop
    implementation 'org.aspectj:aspectjweaver:1.9.9.1'
    implementation 'cglib:cglib:3.3.0'

    // etc
    implementation 'org.reflections:reflections:0.10.2'
    implementation 'ch.qos.logback:logback-classic:1.2.11'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
    implementation 'com.github.jknack:handlebars:4.3.0'
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'org.apache.ant:ant:1.10.12'

    // tomcat
    implementation "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}"
    implementation 'org.apache.tomcat.embed:tomcat-embed-logging-juli:8.5.2'
    implementation "org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}"

    runtimeOnly 'com.h2database:h2:2.1.212'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
    testImplementation 'org.assertj:assertj-core:3.22.0'
    testImplementation "org.springframework:spring-test:${springVersion}"
}

test {
    useJUnitPlatform()
}
